# silent-distill

./: .gitignore  Dockerfile  README.md  pyproject.toml
configs/eval/: control_classification.yaml  control_classification_vit_gru.yaml  data_stats.yaml  dsec_flow.yaml  dsec_flow_submission.yaml  m3ed_flow.yaml  m3ed_segmentation.yaml  mvsec_flow.yaml  prophesee_1mp_detection.yaml  sanity_check_classification.yaml  sanity_check_classification_vit_gru.yaml
configs/finetune/: control_classification.yaml  control_classification_vit_gru.yaml  dsec_flow.yaml  m3ed_flow.yaml  m3ed_segmentation.yaml  mvsec_flow.yaml  prophesee_1mp_detection.yaml  sanity_check_classification.yaml  sanity_check_classification_vit_gru.yaml
configs/pretrain/: control.yaml  control_vit_gru.yaml  dsec.yaml  m3ed.yaml  mvsec.yaml  mvsec_autoencoder.yaml  prophesee_1mp.yaml  sanity_check_experiment.yaml  sanity_check_experiment_vit_gru.yaml
docs/: DATASETS.md  DATA_FORMAT.md  EXPERIMENTS.md  FLOW_BENCHMARK.md  IDEA.md  MVSEC_ABLATIONS.md  THIRD_PARTY.md
scripts/: run_ablations.sh  run_accumulation_curve.sh
scripts/slurm/: finetune_1mp.sbatch  pretrain_1mp.sbatch
src/slassl/: __init__.py  config.py  evaluation.py  losses.py  training.py  utils.py  visualization.py
src/slassl/cli/: convert_numpy.py  data_stats.py  evaluate.py  export_dsec_flow.py  finetune.py  generate_m3ed_flow.py  index_dense.py  index_h5.py  (+5 more)
tests/: test_dataset.py  test_dense.py  test_dsec.py  test_generate_m3ed_flow.py  test_h5_events.py  test_losses.py  test_models.py  test_training.py  test_visualize_events.py  test_visualize_flow.py  test_voxel.py
(+12 files in other folders)
