[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sla-ssl"
version = "0.1.0"
description = "Silence- and Latency-Aware Self-Supervised Learning for event cameras"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "h5py>=3.10",
  "hdf5plugin>=4.4",
  "hydra-core>=1.3.2",
  "imageio-ffmpeg>=0.5",
  "numpy>=2.0",
  "Pillow>=10.0",
  "pypng>=0.20220715.0",
  "PyYAML>=6.0",
  "scipy>=1.11",
  "tensorboard>=2.16",
  "torch>=2.2",
  "torchvision>=0.17",
  "tqdm>=4.66",
]

[project.optional-dependencies]
eval = ["torchmetrics[detection]>=1.3", "pycocotools>=2.0.7"]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
sla-pretrain = "slassl.cli.pretrain:main"
sla-finetune = "slassl.cli.finetune:main"
sla-evaluate = "slassl.cli.evaluate:main"
sla-data-stats = "slassl.cli.data_stats:main"
sla-index-h5 = "slassl.cli.index_h5:main"
sla-index-dense = "slassl.cli.index_dense:main"
sla-index-dsec-test = "slassl.cli.index_dsec_test:main"
sla-index-dsec-flow = "slassl.cli.index_dsec_flow:main"
sla-convert-numpy = "slassl.cli.convert_numpy:main"
sla-visualize-events = "slassl.cli.visualize_events:main"
sla-visualize-flow = "slassl.cli.visualize_flow:main"
sla-export-dsec-flow = "slassl.cli.export_dsec_flow:main"
sla-generate-m3ed-flow = "slassl.cli.generate_m3ed_flow:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
